<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setup.JoinGameFragment">

    <TextView
        android:id="@+id/txt_join_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etxt_user_name"
        android:text="@string/join_user" />

    <EditText
        android:id="@+id/etxt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_join_game_key"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/txt_join_game_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etxt_game_key"
        android:text="@string/join_game_key" />

    <EditText
        android:id="@+id/etxt_game_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_join_find_game"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginBottom="174dp" />

    <Button
        android:id="@+id/btn_join_find_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_join_random"
        android:text="@string/join_find_game" />

    <Button
        android:id="@+id/btn_join_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/join_random" />

</RelativeLayout>
